--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@ layout: default
   <article class="page home-page" itemscope itemtype="http://schema.org/Person">
     <div class="page__inner-wrap">
       <section class="page__content" itemprop="text">
+        <h2 class="archive__subtitle">Introduction</h2>
         <div class="home-intro">{{ content }}</div>
 
         <h2 class="archive__subtitle">News</h2>
