--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,9 +14,12 @@ layout: default
   .home-page .news-list { list-style: none; padding-left: 0; margin: 0 0 1.5em; }
   .home-page .news-list li { font-size: 0.9rem; line-height: 1.6; margin-bottom: 0.4em; padding-left: 0; }
   .home-page .news-list strong { font-weight: 600; margin-right: 0.35em; }
-  .home-page .featured-pub { font-size: 0.9rem; line-height: 1.55; margin: 0; }
-  .home-page .featured-pub a { text-decoration: none; }
-  .home-page .featured-pub a:hover { text-decoration: underline; }
+  .home-page .edu-list { list-style: none; padding-left: 0; margin: 0 0 1.5em; font-size: 0.9rem; line-height: 1.6; }
+  .home-page .edu-list li { margin-bottom: 0.35em; }
+  .home-page .featured-list { list-style: none; padding-left: 0; margin: 0; }
+  .home-page .featured-list li { font-size: 0.9rem; line-height: 1.55; margin-bottom: 0.75em; }
+  .home-page .featured-list a { text-decoration: none; }
+  .home-page .featured-list a:hover { text-decoration: underline; }
 </style>
 
 <div id="main" role="main">
@@ -32,31 +35,37 @@ layout: default
 
         <div class="home-intro">{{ content }}</div>
 
+        <h2 class="archive__subtitle">Education</h2>
+        <ul class="edu-list">
+          <li><strong>Ph.D.</strong> (Dual program) University of Surrey &amp; Beijing Institute of Technology. Supervisors: Dr. Mahdi Boloursaz Mashhadi, Prof. Chuan Heng Foh; Prof. Jun Zhang (BIT).</li>
+          <li><strong>Visiting Ph.D.</strong> Imperial College London (Prof. Deniz Gündüz).</li>
+          <li><strong>B.E.</strong> Beijing Institute of Technology, Electronic Information Engineering (Xu Teli Talented Class; GPA 3.7/4.0, Rank 1/23).</li>
+        </ul>
+
         <h2 class="archive__subtitle">News</h2>
         <ul class="news-list">
           {% for item in site.data.home_news %}
-          <li><strong>{{ item.date }}</strong> {{ item.text }}</li>
+          <li>
+            <strong>{{ item.date }}</strong>
+            {% if item.url %}<a href="{{ item.url }}" target="_blank" rel="noopener">{{ item.text }}</a>{% else %}{{ item.text }}{% endif %}
+          </li>
           {% endfor %}
         </ul>
 
         <h2 class="archive__subtitle">Featured</h2>
-        {% assign featured = site.publications | where: "category", "semantic-communications" | first %}
-        {% if featured %}
-        <p class="featured-pub">
-          <a href="{{ featured.url | prepend: base_path }}">{{ featured.title }}</a>.
-          <em>{{ featured.venue }}</em>, {{ featured.date | date: "%Y" }}.
-          {% if featured.paperurl %}<a href="{{ featured.paperurl }}">[PDF]</a>{% endif %}
-        </p>
-        {% else %}
-        {% assign any_pub = site.publications | first %}
-        {% if any_pub %}
-        <p class="featured-pub">
-          <a href="{{ any_pub.url | prepend: base_path }}">{{ any_pub.title }}</a>.
-          <em>{{ any_pub.venue }}</em>, {{ any_pub.date | date: "%Y" }}.
-          {% if any_pub.paperurl %}<a href="{{ any_pub.paperurl }}">[PDF]</a>{% endif %}
-        </p>
-        {% endif %}
-        {% endif %}
+        <ul class="featured-list">
+          {% for entry in site.data.home_featured %}
+            {% for post in site.publications %}
+              {% if post.url contains entry.slug %}
+          <li>
+            <a href="{{ post.url | prepend: base_path }}">{{ post.title }}</a>.
+            <em>{{ post.venue }}</em>, {{ post.date | date: "%Y" }}.
+            {% if post.paperurl %}<a href="{{ post.paperurl }}">[PDF]</a>{% endif %}
+          </li>
+              {% endif %}
+            {% endfor %}
+          {% endfor %}
+        </ul>
       </section>
     </div>
   </article>
